fix: add synchronized + remove repeated code