@@ -2,18 +2,19 @@ package exercises.four.operations;
 
 import java.util.List;
 
-public class RemoveFirstItem implements Runnable {
+public class Remove implements Runnable {
     private List<Integer> array;
 
-    public RemoveFirstItem(List<Integer> array) {
+    public Remove(List<Integer> array) {
         this.array = array;
     }
 
     @Override
     public void run() {
         while (true) {
-            array.remove(0);
+            synchronized(array) {
+                array.removeFirst();
+            }
         }
     }
-
 }
